--- a/custom.css
+++ b/custom.css
@@ -1,22 +1,8 @@
 h1 {
     line-height: 1.5;
 }
-/*a {
-    color: #BCCEF8;
-}
 
-body {
-  color: #566b78;
+.small-image {
+    height: 300px;
+    width: 300px;
 }
-
-code,
-pre {
-  background: #f5f7f9;
-  border-bottom: 1px solid #d8dee9;
-  color: #a7adba;
-}
-
-pre {
-  border-left: 2px solid #69c;
-}
-*/
